added enter with card page

--- a/src/main/resources/com/fitness/menu.fxml
+++ b/src/main/resources/com/fitness/menu.fxml
@@ -1,14 +1,274 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.fitness.Controller.MenuController"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="800.0" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitness.Controller.MenuController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="230.0" minWidth="230.0" prefWidth="230.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
+   <children>
+      <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #FFF;">
+         <children>
+            <ImageView fitHeight="100.0" fitWidth="100.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@assets/icon.png" />
+               </image>
+            </ImageView>
+            <VBox VBox.vgrow="ALWAYS">
+               <children>
+                  <Button fx:id="enterButton" mnemonicParsing="false" VBox.vgrow="ALWAYS">
+                     <graphic>
+                        <HBox alignment="CENTER">
+                           <children>
+                              <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@assets/enter.png" />
+                                 </image>
+                              </ImageView>
+                              <MenuButton alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" popupSide="RIGHT" prefWidth="300.0" styleClass="menu_button" stylesheets="@style/button.css" text="Մուտք" textAlignment="CENTER" textFill="#367bf5" HBox.hgrow="ALWAYS">
+                                 <items>
+                                    <MenuItem>
+                                       <graphic>
+                                          <HBox styleClass="menu_item" stylesheets="@style/menu.css">
+                                             <children>
+                                                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@assets/card.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <Button fx:id="cardButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" styleClass="submenu_button" stylesheets="@style/button.css" text="Քարտով">
+                                                   <HBox.margin>
+                                                      <Insets left="5.0" />
+                                                   </HBox.margin>
+                                                </Button>
+                                             </children>
+                                          </HBox>
+                                       </graphic>
+                                    </MenuItem>
+                                    <MenuItem mnemonicParsing="false">
+                                       <graphic>
+                                          <HBox styleClass="menu_item" stylesheets="@style/menu.css">
+                                             <children>
+                                                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@assets/without-card.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <Button fx:id="withoutCardButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" style="-fx-pref-width: 150px;" styleClass="submenu_button" stylesheets="@style/button.css" text="Առանց քարտ">
+                                                   <HBox.margin>
+                                                      <Insets left="5.0" />
+                                                   </HBox.margin>
+                                                </Button>
+                                             </children>
+                                          </HBox>
+                                       </graphic>
+                                    </MenuItem>
+                                 </items>
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </MenuButton>
+                           </children>
+                        </HBox>
+                     </graphic>
+                     <stylesheets>
+                        <URL value="@style/button.css" />
+                        <URL value="@style/menu.css" />
+                     </stylesheets>
+                     <styleClass>
+                        <String fx:value="menu_button" />
+                        <String fx:value="menu_item" />
+                     </styleClass>
+                  </Button>
+                  <Button fx:id="customersButton" mnemonicParsing="false">
+                     <graphic>
+                        <HBox prefWidth="200.0">
+                           <children>
+                              <ImageView disable="true" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@assets/customer.png" />
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="DEFAULT" />
+                                 </cursor>
+                              </ImageView>
+                              <Label styleClass="menu_label" stylesheets="@style/menu.css" text="Հաճախորդներ" />
+                           </children>
+                        </HBox>
+                     </graphic>
+                     <stylesheets>
+                        <URL value="@style/button.css" />
+                        <URL value="@style/menu.css" />
+                     </stylesheets>
+                     <styleClass>
+                        <String fx:value="menu_button" />
+                        <String fx:value="menu_item" />
+                     </styleClass>
+                  </Button>
+                  <Button fx:id="employeesButton" mnemonicParsing="false">
+                     <graphic>
+                        <HBox prefWidth="200.0">
+                           <children>
+                              <ImageView disable="true" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@assets/employee.png" />
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="DEFAULT" />
+                                 </cursor>
+                              </ImageView>
+                              <Label styleClass="menu_label" stylesheets="@style/menu.css" text="Աշխատողներ" />
+                           </children>
+                        </HBox>
+                     </graphic>
+                     <stylesheets>
+                        <URL value="@style/button.css" />
+                        <URL value="@style/menu.css" />
+                     </stylesheets>
+                     <styleClass>
+                        <String fx:value="menu_button" />
+                        <String fx:value="menu_item" />
+                     </styleClass>
+                  </Button>
+                  <Button fx:id="servicesButton" mnemonicParsing="false">
+                     <graphic>
+                        <HBox prefWidth="200.0">
+                           <children>
+                              <ImageView disable="true" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@assets/service.png" />
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="DEFAULT" />
+                                 </cursor>
+                              </ImageView>
+                              <Label styleClass="menu_label" stylesheets="@style/menu.css" text="Ծառայություններ" />
+                           </children>
+                        </HBox>
+                     </graphic>
+                     <stylesheets>
+                        <URL value="@style/button.css" />
+                        <URL value="@style/menu.css" />
+                     </stylesheets>
+                     <styleClass>
+                        <String fx:value="menu_button" />
+                        <String fx:value="menu_item" />
+                     </styleClass>
+                  </Button>
+                  <Button fx:id="subscriptionButton" mnemonicParsing="false">
+                     <graphic>
+                        <HBox prefWidth="200.0">
+                           <children>
+                              <ImageView disable="true" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@assets/subscription.png" />
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="DEFAULT" />
+                                 </cursor>
+                              </ImageView>
+                              <Label styleClass="menu_label" stylesheets="@style/menu.css" text="Աբոնեմենտ" />
+                           </children>
+                        </HBox>
+                     </graphic>
+                     <stylesheets>
+                        <URL value="@style/button.css" />
+                        <URL value="@style/menu.css" />
+                     </stylesheets>
+                     <styleClass>
+                        <String fx:value="menu_button" />
+                        <String fx:value="menu_item" />
+                     </styleClass>
+                  </Button>
+                  <Button fx:id="reportButton" mnemonicParsing="false">
+                     <graphic>
+                        <HBox alignment="CENTER" prefWidth="200.0">
+                           <children>
+                              <ImageView disable="true" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@assets/report.png" />
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="DEFAULT" />
+                                 </cursor>
+                              </ImageView>
+                              <Label styleClass="menu_label" stylesheets="@style/menu.css" text="Հաշվետվություն" />
+                           </children>
+                        </HBox>
+                     </graphic>
+                     <stylesheets>
+                        <URL value="@style/button.css" />
+                        <URL value="@style/menu.css" />
+                     </stylesheets>
+                     <styleClass>
+                        <String fx:value="menu_button" />
+                        <String fx:value="menu_item" />
+                     </styleClass>
+                  </Button>
+               </children>
+            </VBox>
+            <Button fx:id="settingsButton" mnemonicParsing="false">
+               <graphic>
+                  <HBox alignment="CENTER" prefWidth="200.0">
+                     <children>
+                        <ImageView disable="true" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                           <image>
+                              <Image url="@assets/settings.png" />
+                           </image>
+                           <cursor>
+                              <Cursor fx:constant="DEFAULT" />
+                           </cursor>
+                        </ImageView>
+                        <Label styleClass="menu_label" stylesheets="@style/menu.css" text="Կարգավորումներ" />
+                     </children>
+                  </HBox>
+               </graphic>
+               <stylesheets>
+                  <URL value="@style/button.css" />
+                  <URL value="@style/menu.css" />
+               </stylesheets>
+               <styleClass>
+                  <String fx:value="menu_button" />
+                  <String fx:value="menu_item" />
+               </styleClass>
+            </Button>
+         </children>
+      </VBox>
+      <GridPane fx:id="activePane" alignment="CENTER" style="-fx-background-color: #F3F3F3;" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+         <padding>
+            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+         </padding>
+      </GridPane>
+   </children>
+</GridPane>
